--- a/HTML/구구단.html
+++ b/HTML/구구단.html
@@ -5,7 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>구구단</title>
-    <script src="../Javascript/구구단.js"></script>
+    <script src="../Javascript/구구단.js" type="text/javascript"></script>
+    <link rel="stylesheet" href="../CSS/구구단.css" type="text/css">
 </head>
 <body>
     <h2>구구단을 외자!</h2>
